now working with threadpool